--- a/content/episode/1.md
+++ b/content/episode/1.md
@@ -1,6 +1,6 @@
 ---
 layout: episode
-title: 色は匂えど散りぬるを
+title: Super edisode 1
 date: 2017-05-13
 people:
   - 1000ch
@@ -8,7 +8,7 @@ people:
 audio: /hugo-boilerplate-podcast/audio/1.mp3
 ---
 
-# 色は匂えど散りぬるを
+# Super edisode 1
 
 - [Google](https://google.com)
 - [Twitter](https://twitter.com)
