change audio path

--- a/content/episode/1.md
+++ b/content/episode/1.md
@@ -5,7 +5,7 @@ date: 2017-05-13
 people:
   - 1000ch
   - hiloki
-audio: /hugo-boilerplate-podcast/audio/1.mp3
+audio: /audio/1.mp3
 ---
 
 # Super edisode 1
