--- a/content/episode/1.md
+++ b/content/episode/1.md
@@ -1,14 +1,20 @@
 ---
 layout: episode
-title: Super edisode 1
-date: 2017-05-13
+title: Макбет - 2015
+date: 2020-07-07
 people:
-  - 1000ch
-  - hiloki
-audio: /audio/1.mp3
+  - volyx
+  - anabilisa
+  - iphilimonov
+  - jeanne_jour
+  - egermanovich
+  - maria_o
+audio: /audio/0-kinoklub-makbet.mp3
 ---
 
-# Super edisode 1
+#  [Макбет - 2015](https://www.kinopoisk.ru/film/760740/)
+
+![](https://avatars.mds.yandex.net/get-kinopoisk-image/1600647/dfd5a6af-e654-4e0e-b989-8972e75f21f1/360)
 
 - [Google](https://google.com)
 - [Twitter](https://twitter.com)
